Name:			rivertam
Version:		4
Author:			Christoffer Öjeling
Maintainer:		cadynum@gmail.com
License:		GPL
License-File:		LICENSE
Category:		Network
Synopsis:		IRC-bot with tremulous polling capabilities and various other functions.
Description:		Placeholder....

Cabal-Version:		>= 1.2
Build-Type:		Simple
Data-Files:		*.conf, IpToCountry.csv, BUILD, README
Tested-With:            GHC==6.10.2


Library
  Hs-Source-Dirs:	src
  Extensions:           BangPatterns, ViewPatterns, NamedFieldPuns, StandaloneDeriving
  Exposed-Modules:      Control.Strategies.DeepSeq
                        Helpers
                        TremPolling
                        TremLib
                        GeoIP


Executable rivertam
  Main-is:          	Main.hs
  Hs-Source-Dirs:	src
  Extensions:		BangPatterns, ViewPatterns , NamedFieldPuns, StandaloneDeriving, GeneralizedNewtypeDeriving, FlexibleInstances, FlexibleContexts, TypeSynonymInstances, ScopedTypeVariables
  Build-Depends:	base, old-time, old-locale, array, bytestring, containers, network, stm, mtl, random, directory, parallel, parsec, HDBC, HDBC-postgresql
  Other-Modules:        River Main Config Send Parse
                        Command CommandInterface RiverHDBC
                        ComAlias ComClans ComCW ComMemos ComQuotes ComTrem ComTremRelay
                        IRC IrcState
  Ghc-Prof-Options:	-prof -auto-all -caf-all
  Ghc-Options:          -threaded


