Name:			rivertam
Version:		5
Author:			Christoffer Öjeling
Maintainer:		cadynum@gmail.com
License:		GPL
License-File:		LICENSE
Category:		Network
Synopsis:		IRC-bot with tremulous polling capabilities and various other functions.
Description:		Placeholder....

Cabal-Version:		>= 1.2
Build-Type:		Simple
Data-Files:		*.conf, IpToCountry.csv, BUILD, README
Tested-With:            GHC==6.12.1


Library
  Hs-Source-Dirs:	src
  Extensions:           BangPatterns ViewPatterns NamedFieldPuns
                        StandaloneDeriving RecordWildCards
                        GeneralizedNewtypeDeriving FlexibleInstances FlexibleContexts
                        TypeSynonymInstances ScopedTypeVariables
  Exposed-Modules:      Control.Strategies.DeepSeq
                        Helpers
                        River
                        Module
                        Irc.Protocol
                        Irc.State
                        Irc.OnEvent
                        Tremulous.Polling
                        Tremulous.Util
  Other-Modules:        Send
                        Config
                        Command


Executable rivertam
  Main-is:          	Main.hs
  Hs-Source-Dirs:	src
  Extensions:		BangPatterns, ViewPatterns , NamedFieldPuns, StandaloneDeriving, GeneralizedNewtypeDeriving, FlexibleInstances, FlexibleContexts, TypeSynonymInstances, ScopedTypeVariables,  RecordWildCards
  Build-Depends:	base>=4, old-time, old-locale, array, bytestring, containers, network, stm, mtl, random, directory, parallel, parsec, HDBC, HDBC-postgresql
  Other-Modules:        Module.Essential
                        Module.Core
                        Module.State
                        Module.Tremulous
                        Module.Quotes
                        Module.Clans
                        Module.Core
                        Module.ClanWar
                        Module.Memos
                        Module.Alias

  Ghc-Prof-Options:	-prof -auto-all -caf-all
  Ghc-Options:          -threaded


