Name:                   rivertam
Version:                6
Author:                 Christoffer Öjeling
Maintainer:             cadynum@gmail.com
License:                GPL
License-File:           LICENSE
Category:               Network
Synopsis:               IRC-bot with tremulous polling capabilities and various other functions.
Description:            Placeholder....

Cabal-Version:          >= 1.2
Build-Type:             Simple
Data-Files:             *.conf, BUILD, README
Tested-With:            GHC==7.6.3


Executable rivertam
  Main-is:              Main.hs
  Hs-Source-Dirs:       src
  Extensions:           BangPatterns, ViewPatterns , NamedFieldPuns, StandaloneDeriving, GeneralizedNewtypeDeriving, FlexibleInstances, FlexibleContexts, TypeSynonymInstances, ScopedTypeVariables,  RecordWildCards
  Build-Depends:        base>=4.3, old-time, old-locale, array, bytestring, containers, network, stm, mtl, random, directory, parsec, HDBC, HDBC-postgresql, deepseq, tremulous-query
  Other-Modules:        Module.Essential
                        Module.Core
                        Module.State
                        Module.Tremulous
                        Module.Quotes
                        Module.Clans
                        Module.Core
                        Module.ClanWar
                        Module.Memos
                        Module.Alias
                        River
                        Module
                        Helpers
                        Irc.Protocol
                        Irc.State
                        Irc.OnEvent
                        Send
                        Config
                        Command
  Ghc-Options:          -threaded
